src/snapshots/webgit__tests__nav_index.snap
---
source: src/lib.rs
expression: "render_index_nav(&index_url(\"\"))"
---
<nav id="nav">
<a href="#!/index" class="nav-tab active">index</a>
<a href="#!/about" class="nav-tab">about</a>
</nav>
