src/snapshots/webgit__tests__nav_index_about.snap
---
source: src/lib.rs
expression: "render_index_nav(\"#!/about\")"
---
<nav id="nav">
<a href="#!/index" class="nav-tab">index</a>
<a href="#!/about" class="nav-tab active">about</a>
</nav>
