src/snapshots/webgit__tests__nav_log_on_tag.snap
---
source: src/lib.rs
expression: "render_nav(\"#!/log?h=v1.0.0\")"
---
<nav id="nav">
<a href="#!/summary" class="nav-tab">summary</a>
<a href="#!/refs" class="nav-tab">refs</a>
<a href="#!/log?h=v1.0.0" class="nav-tab active">log</a>
<a href="#!/tree?h=v1.0.0" class="nav-tab">tree</a>
<a href="#!/commit" class="nav-tab">commit</a>
<a href="#!/about" class="nav-tab">about</a>
</nav>
