src/snapshots/webgit__tests__nav_summary.snap
---
source: src/lib.rs
expression: "render_nav(\"#!/summary\")"
---
<nav id="nav">
<a href="#!/readme" class="nav-tab">readme</a>
<a href="#!/summary" class="nav-tab active">summary</a>
<a href="#!/refs" class="nav-tab">refs</a>
<a href="#!/log" class="nav-tab">log</a>
<a href="#!/tree" class="nav-tab">tree</a>
<a href="#!/commit" class="nav-tab">commit</a>
<a href="#!/about" class="nav-tab">about</a>
</nav>
