src/snapshots/webgit__tests__path_bar_crumbs_no_ref.snap
---
source: src/lib.rs
expression: "render_pb(PathBar::Crumbs\n{ display: None, path: \"src\".to_string(), head: None, })"
---
<div id="path-bar">path: <a href="#!/tree">root</a> / <a href="#!/tree/src">src</a>
</div>
