src/snapshots/webgit__tests__path_bar_hidden.snap
---
source: src/lib.rs
expression: "render_pb(PathBar::Hidden)"
---
<div id="path-bar" class="hide">
</div>
