src/snapshots/webgit__tests__path_bar_ref_only_on_commit.snap
---
source: src/lib.rs
expression: "render_pb(PathBar::RefOnly\n{ name: \"6121d0b9\".to_string(), kind: RefKind::Commit, })"
---
<div id="path-bar">commit: 6121d0b9</div>
